2019-07-18  Mike Crowe  <mac@mcrowe.com>

	* nptl/forward.c: Remove unnecessary __pthread_cond_clockwait and
	pthread_cond_clockwait forwarding functions.  There are no internal
	users, so it is unnecessary to expose these functions in libc.so.
	* sysdeps/nptl/pthread-functions.h (pthread_functions): Remove
	unnecessary ptr___pthread_cond_clockwait member.
	* nptl/nptl-init.c (pthread_functions): Remove assignment of
	removed member.

2019-07-17  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #21897]
	* localedata/locales/aa_DJ (abday): Update from CLDR, all words
	begin with an uppercase letter now.
	(abmon): Likewise.
	(mon): Update from CLDR, reword February from "Kudo" to
	"Naharsi Kudo", April from "Agda Baxisso" to "Agda Baxis",
	and August from "Liiqen" to "Leqeeni".
	* localedata/locales/aa_ER (mon): Update from CLDR, reword
	April from "Agda Baxisso" to "Agda Baxis" and August from
	"Leqeeni" to "Liiqen".
	* localedata/locales/aa_ER@saaho (mon): Likewise.
	* localedata/locales/aa_ET (abmon): Update from CLDR, reword
	abbreviated February from "Kud" to "Nah".
	(mon): Update from CLDR, reword February from "Kudo" to
	"Naharsi Kudo" and April from "Agda Baxisso" to "Agda Baxis".

2019-07-17  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #23996]
	* localedata/locales/nl_BE (LC_NAME): Replace with “copy "nl_NL"”.

2019-07-17  PanderMusubi  <pander@users.sourceforge.net>

	[BZ #23996]
	* localedata/locales/nl_BE (LC_NAME): Add name_gen, name_mr,
	name_mrs, name_miss, and name_ms.
	* localedata/locales/nl_NL (LC_NAME): Likewise.

2019-07-17  Daniil Zhilin  <generalfailer@protonmail.com>

	[BZ #24200]
	* localedata/locales/ga_IE (first_weekday): Add, set to 2 (Monday).
	* localedata/locales/en_IE (first_weekday): Likewise.

2019-07-12  Mike Crowe  <mac@mcrowe.com>

	* nptl/pthread_cond_wait.c: (__pthread_cond_clockwait): Remove code
	that is only useful if futex_supports_exact_relative_timeouts ()
	returns false.